# OmicsCopilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  build.sh  compose.yml  docker-compose-old.yml  docker-compose.yml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/.workflows/: CI-CD.yml
.github/workflows/: build-test-release.yml  main.yml  todo-to-issue.yml
.streamlit/: config.toml
app/: home.py  main.py  settings.py
app/components/: __init__.py
app/components/charts/: __init__.py  deg.py  example.py
app/components/charts/frontend/: package.json
app/components/charts/frontend/public/: deg.csv
app/components/charts/frontend/src/: ChartRouter.tsx  VolcanoPlot.tsx
backend/: Dockerfile  pyproject.toml
experiments/visx/plots/: components.json  package.json
experiments/visx/plots/src/app/: page.js
experiments/visx/plots/src/components/ui/: date-range-picker.jsx  team-switcher.jsx
experiments/visx/volcano/: package.json
experiments/visx/volcano/public/: deg.csv  deg.py
experiments/visx/volcano/src/: App.js  worldBankData.js
experiments/visx/volcano/src/components/plots/: ScatterPlot.js  VolcanoPlot.js
notebooks/: onnx-embeddings.ipynb  pauls-essays.ipynb  template.ipynb
scripts/: download-models.sh
src/client/: Dockerfile  home.py  pyproject.toml  run_client.sh
src/client/app/: config.py  home.py  settings.py
src/client/app/components/: __init__.py
src/client/app/pages/: 1_datastore.py  2_copilot.py  3_data_explorer.py  4_biomarkers.py  5_differential_expression.py  6_gene_enrichment.py  7_aiml.py  8_settings.py
src/client/app/schema/: datasets.py
src/client/components/: __init__.py
src/client/components/charts/: __init__.py  deg.py  example.py
src/client/components/charts/frontend/public/: deg.csv
src/client/components/charts/frontend/src/: index.tsx
src/client/components/chat/: __init__.py
src/client/components/chat/frontend/src/: MyComponent.tsx
src/data/: __init__.py  download.py
src/data/BARRA_CuRDa/: methods.json
src/db/: __init__.py  datasets.py
src/runpod-worker/: Dockerfile
src/runpod-worker/builder/: pyproject.toml  setup.sh
src/runpod-worker/src/: handler.py
src/schema/: datasets.py  papers.py  utils.py
src/server/: Dockerfile  __init__.py  main.py  pyproject.toml  run_server.sh
src/server/api/: __init__.py  app.py
src/server/api/routes/: auth.py  datasets.py  ml-services.py
src/server/copilot/: __init__.py  parsing.py
src/server/data/: __init__.py  download.py  load.py  test_sentences.json
src/server/db/: __init__.py  datasets.py
src/server/routes/: data_qc.py  dataqc.py  datasets.py
src/server/schema/: auth.py  datasets.py  papers.py  params.py  utils.py
src/server/scripts/: download-models.sh
src/worker/: Dockerfile
src/worker/builder/: pyproject.toml
src/worker/src/: handler.py  models.py  settings.py
