[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pandas = "^2.1.1"
rich = "^13.6.0"
seaborn = "^0.13.0"
fastcluster = "^1.2.6"
statsmodels = "^0.14.0"
geoparse = "^2.0.3"
tqdm = "^4.66.1"
scipy = "^1.11.3"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
jupyter = "^1.0.0"
black = "20.8b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
