[tool.poetry]
name = "client"
version = "0.1.0"
description = "Streamlit client for Omics"
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.27.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
pandas = "^2.1.1"
rich = "^13.6.0"
asyncio = "^3.4.3"
pyarrow = "^14.0.1"
bokeh = "^3.3.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.10.0"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
