[tool.poetry]
name = "server"
version = "0.1.0"
description = "FastAPI server for Omics Copilot"
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
statsmodels = "^0.14.0"
geoparse = "^2.0.3"
pandas = "^2.1.1"
unstructured = {extras = ["md", "pdf"], version = "^0.10.27"}
opencv-python = "^4.8.1.78"
pytesseract = "^0.3.10"
llama-hub = "^0.0.43"
openai = "^1.2.3"
optimum = {extras = ["onnxruntime-gpu"], version = "^1.14.0"}
huggingface-hub = ">=0.16.4,<0.18"
scikit-learn = "^1.3.2"
umap-learn = "^0.5.4"
wandb = "^0.16.0"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
asyncio = "^3.4.3"
pyarrow = "^14.0.1"
bokeh = "^3.3.1"
rich = "^13.6.0"
torch = {version = "^2.1.1+cu118", source = "pytorch-cu118"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.10.0"
pre-commit = "^3.5.0"
seaborn = "^0.13.0"
flake8 = "^6.1.0"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
