[tool.poetry]
name = "compute"
version = "0.1.0"
description = ""
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
runpod = "^1.3.6"
torch = "^2.1.1"
transformers = "^4.35.2"
accelerate = "^0.24.1"
optimum = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
