[tool.poetry]
name = "compute"
version = "0.1.0"
description = ""
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
runpod = "^1.3.6"
torch = {version = "^2.1.1+cu118", source = "pytorch-cu118"}
transformers = "^4.35.2"
optimum = {extras = ["onnxruntime-gpu"], version = "^1.14.1"}
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
